Issue #6544 - Updates based on review
Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>